Added back 3-way switch for language server.
There are 5 unit tests that still need fixing.

This is not 100% perfect. Intellicode may sometimes prompt for confirmation and attempt to set 'jediEnabled'
to false to enable itself, but that won't have the desired effect. We need to get Intellicode to start using
this new setting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
     "prettier.printWidth": 180,
     "prettier.singleQuote": true,
     "python.jediEnabled": false,
+    "python.languageServer": "microsoft",
     "python.analysis.logLevel": "Trace",
     "python.analysis.downloadChannel": "beta",
     "python.linting.pylintEnabled": false,
