--- a/news/.vscode/settings.json
+++ b/news/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.jediEnabled": false,
+    "python.languageServer": "microsoft",
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     "python.testing.pytestArgs": [
