--- a/package.json
+++ b/package.json
@@ -2711,6 +2711,8 @@
         "inversify": "^4.11.1",
         "jsonc-parser": "^2.0.3",
         "koa": "^2.11.0",
+        "koa-compress": "^3.0.0",
+        "koa-logger": "^3.2.1",
         "less-plugin-inline-urls": "^1.2.0",
         "line-by-line": "^0.1.6",
         "lodash": "^4.17.15",
@@ -2795,6 +2797,8 @@
         "@types/jquery": "^1.10.35",
         "@types/jsdom": "^11.12.0",
         "@types/koa": "^2.11.0",
+        "@types/koa-compress": "^2.0.9",
+        "@types/koa-logger": "^3.1.1",
         "@types/koa__cors": "^2.2.3",
         "@types/loader-utils": "^1.1.3",
         "@types/lodash": "^4.14.104",
