--- a/package.json
+++ b/package.json
@@ -2845,6 +2845,7 @@
         "chai": "^4.1.2",
         "chai-arrays": "^2.0.0",
         "chai-as-promised": "^7.1.1",
+        "chai-http": "^4.3.0",
         "codecov": "^3.6.1",
         "colors": "^1.2.1",
         "copy-webpack-plugin": "^4.6.0",
