--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -219,6 +219,7 @@
                 "--recursive",
                 "--colors",
                 //"--grep", "<suite name>",
+                "--grep", "LiveShare",
                 "--timeout=300000"
             ],
             "outFiles": [
