Initial commit + fix existing tests

--- a/package.json
+++ b/package.json
@@ -1086,6 +1086,9 @@
                 ],
                 "program": "./out/client/debugger/debugAdapter/main.js",
                 "runtime": "node",
+                "variables": {
+                    "pickProcess": "python.pickLocalProcess"
+                  },
                 "configurationSnippets": [],
                 "configurationAttributes": {
                     "launch": {
