--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -174,6 +174,7 @@
                 "--recursive",
                 "--colors",
                 //"--grep", "<suite name>",
+                "--grep", "IANHU",
                 "--timeout=300000"
             ],
             "outFiles": [
