--- a/package.json
+++ b/package.json
@@ -2720,7 +2720,15 @@
         "lint": "tslint src/**/*.ts -t verbose",
         "clean": "gulp clean",
         "updateBuildNumber": "gulp updateBuildNumber",
-        "verifyBundle": "gulp verifyBundle"
+        "verifyBundle": "gulp verifyBundle",
+        "ianhu": "node --max_old_space_size=9096 node_modules/.bin/webpack --config webpack.config.js --mode production",
+        "ianhu2": "node --max_old_space_size=9096 webpack --config webpack.config.js --mode production",
+        "ianhu3": "npm run --max_old_space_size=9096 webpack",
+        "ianhu4": "npm run --max_old_space_size=9096 webpack -- --config webpack.config.js --mode production",
+        "ianhu5": "npm --max_old_space_size=9096 run webpack -- --config webpack.config.js --mode production",
+        "ianhuWorks": "cross-env NODE_OPTIONS=--max_old_space_size=9096 npm run webpack -- --config webpack.config.js --mode production",
+        "ianhu7": "cross-env NODE_OPTIONS=--max_old_space_size=9096 webpack --config webpack.config.js --mode production",
+        "webpack": "webpack"
     },
     "dependencies": {
         "@blueprintjs/select": "3.10.0",
@@ -2882,6 +2890,7 @@
         "codecov": "^3.6.1",
         "colors": "^1.2.1",
         "copy-webpack-plugin": "^4.6.0",
+        "cross-env": "^6.0.3",
         "cross-spawn": "^6.0.5",
         "css-loader": "^1.0.1",
         "cucumber-html-reporter": "^4.0.5",
