--- a/package.json
+++ b/package.json
@@ -2699,11 +2699,11 @@
     "scripts": {
         "package": "gulp clean && gulp prePublishBundle && vsce package -o ms-python-insiders.vsix",
         "compile": "tsc -watch -p ./",
-        "compile-webviews-watch": "npx npx -n --max_old_space_size=9096 webpack --config webpack.datascience-ui.config.js --watch",
+        "compile-webviews-watch": "cross-env NODE_OPTIONS=--max_old_space_size=9096 webpack --config webpack.datascience-ui.config.js --watch",
         "checkDependencies": "gulp checkDependencies",
-        "dump-datascience-webpack-stats": "npx -n --max_old_space_size=9096 webpack --config webpack.datascience-ui.config.js --profile --json > tmp/ds-stats.json",
+        "dump-datascience-webpack-stats": "cross-env NODE_OPTIONS=--max_old_space_size=9096 webpack --config webpack.datascience-ui.config.js --profile --json > tmp/ds-stats.json",
         "compile-webviews": "gulp compile-webviews",
-        "compile-webviews-verbose": "npx webpack --config webpack.datascience-ui.config.js",
+        "compile-webviews-verbose": "cross-env NODE_OPTIONS=--max_old_space_size=9096 webpack --config webpack.datascience.config.js",
         "postinstall": "node ./build/ci/postInstall.js",
         "test": "node ./out/test/standardTest.js && node ./out/test/multiRootTest.js",
         "test:unittests": "mocha --opts ./build/.mocha.unittests.js.opts",
@@ -2721,13 +2721,6 @@
         "clean": "gulp clean",
         "updateBuildNumber": "gulp updateBuildNumber",
         "verifyBundle": "gulp verifyBundle",
-        "ianhu": "node --max_old_space_size=9096 node_modules/.bin/webpack --config webpack.config.js --mode production",
-        "ianhu2": "node --max_old_space_size=9096 webpack --config webpack.config.js --mode production",
-        "ianhu3": "npm run --max_old_space_size=9096 webpack",
-        "ianhu4": "npm run --max_old_space_size=9096 webpack -- --config webpack.config.js --mode production",
-        "ianhu5": "npm --max_old_space_size=9096 run webpack -- --config webpack.config.js --mode production",
-        "ianhuWorks": "cross-env NODE_OPTIONS=--max_old_space_size=9096 npm run webpack -- --config webpack.config.js --mode production",
-        "ianhu7": "cross-env NODE_OPTIONS=--max_old_space_size=9096 webpack --config webpack.config.js --mode production",
         "webpack": "webpack"
     },
     "dependencies": {
