--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -218,7 +218,7 @@
                 "--ui=tdd",
                 "--recursive",
                 "--colors",
-                "--grep", "np.array",
+                // "--grep", "",
                 "--timeout=300000"
             ],
             "outFiles": [
