Get rid of default for queries.

--- a/package.json
+++ b/package.json
@@ -1818,15 +1818,22 @@
                 },
                 "python.dataScience.variableQueries": {
                     "type": "array",
-                    "default": [
-                        {
-                            "language": "python",
-                            "query": "%who_ls",
-                            "parseExpr": "'(\\w+)'"
-                        }
-                    ],
-                    "description": "Language to query mapping for returning the list of active variables in a Jupyter kernel. Used by the Variable Explorer in both the Interactive Window and Notebooks.",
-                    "scope": "resource"
+                    "description": "Language to query mapping for returning the list of active variables in a Jupyter kernel. Used by the Variable Explorer in both the Interactive Window and Notebooks. Example: \n'[\n{\n   \"language\": \"python\",\n   \"query\": \"%who_ls\",\n  \"parseExpr\": \"'(\\\\w+)'\"\n}\n]'",
+                    "scope": "machine",
+                    "examples": [
+                        [
+                            {
+                                "language": "python",
+                                "query": "%who_ls",
+                                "parseExpr": "'(\\w+)'"
+                            },
+                            {
+                                "language": "julia",
+                                "query": "whos",
+                                "parseExpr": "'(\\w+)'"
+                            }
+                        ]                        
+                    ]
                 },
                 "python.disableInstallationCheck": {
                     "type": "boolean",
