Fix python who_ls to not be limited to 1000 entries

--- a/package.json
+++ b/package.json
@@ -1824,7 +1824,7 @@
                         [
                             {
                                 "language": "python",
-                                "query": "%who_ls",
+                                "query": "_rwho_ls = %who_ls\\nprint(_rwho_ls)",
                                 "parseExpr": "'(\\w+)'"
                             },
                             {
