--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -237,6 +237,12 @@
                 //"--grep", "<suite name>",
                 "--timeout=300000"
             ],
+            "env": {
+                // Remove `X_` prefix to test with real python (for DS functional tests).
+                "X_VSCODE_PYTHON_ROLLING": "1",
+                // Remove `X_` prefix and update path to test with real python interpreter (for DS functional tests).
+                "X_CI_PYTHON_PATH": "<Python Path>"
+            },
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
