--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -238,10 +238,11 @@
                 "--timeout=300000"
             ],
             "env": {
-                // Remove `X_` prefix to test with real python (for DS functional tests).
-                "X_VSCODE_PYTHON_ROLLING": "1",
-                // Remove `X_` prefix and update path to test with real python interpreter (for DS functional tests).
-                "X_CI_PYTHON_PATH": "<Python Path>"
+                // Remove `X` prefix to test with real python (for DS functional tests).
+                "XVSCODE_PYTHON_ROLLING": "1",
+                // Remove `X` prefix and update path to test with real python interpreter (for DS functional tests).
+                // Do not use a conda environment (as it needs to be activated and the like).
+                "XCI_PYTHON_PATH": "<Python Path>"
             },
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
