--- a/package.json
+++ b/package.json
@@ -2788,6 +2788,7 @@
         "@jupyterlab/coreutils": "^3.1.0",
         "@jupyterlab/services": "^4.2.0",
         "@koa/cors": "^3.0.0",
+        "@loadable/component": "^5.12.0",
         "@msrvida/python-program-analysis": "^0.4.1",
         "ansi-regex": "^4.1.0",
         "arch": "^2.1.0",
@@ -2886,6 +2887,7 @@
         "@types/koa-compress": "^2.0.9",
         "@types/koa-logger": "^3.1.1",
         "@types/koa__cors": "^2.2.3",
+        "@types/loadable__component": "^5.10.0",
         "@types/loader-utils": "^1.1.3",
         "@types/lodash": "^4.14.104",
         "@types/md5": "^2.1.32",
