--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
     "python.linting.flake8Args": [
         "--max-line-length=120"
     ],
-    "typescript.preferences.importModuleSpecifier": "relative"
+    "typescript.preferences.importModuleSpecifier": "relative",
+    "python.pythonPath": ".venv\\Scripts\\python.exe"
 }
