--- a/package.json
+++ b/package.json
@@ -1465,6 +1465,7 @@
                             "Reload - experiment",
                             "AA_testing - experiment",
                             "WebHostNotebook - experiment",
+                            "UseTerminalToGetActivatedEnvVars - experiment",
                             "All"
                         ]
                     },
@@ -1484,6 +1485,7 @@
                             "Reload - experiment",
                             "AA_testing - experiment",
                             "WebHostNotebook - experiment",
+                            "UseTerminalToGetActivatedEnvVars - experiment",
                             "All"
                         ]
                     },
@@ -2926,7 +2928,7 @@
         "@types/tmp": "0.0.33",
         "@types/untildify": "^3.0.0",
         "@types/uuid": "^3.4.3",
-        "@types/vscode": "^1.38.0",
+        "@types/vscode": "^1.41.0",
         "@types/webpack-bundle-analyzer": "^2.13.0",
         "@types/winreg": "^1.2.30",
         "@types/ws": "^6.0.1",
