--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,6 +1,8 @@
-!out/client/**/*.map
 **/*.map
-!out/datascience-ui/**/*.map
+**/*.analyzer.html
+!out/datascience-ui/notebook/commons.initial.bundle.js.map
+!out/datascience-ui/notebook/interactiveWindow.js.map
+!out/datascience-ui/notebook/nativeEditor.js.map
 *.vsix
 .appveyor.yml
 .editorconfig
@@ -25,7 +27,9 @@ package.datascience-ui.dependencies.json
 package-lock.json
 packageExtension.cmd
 pvsc-dev-ext.py
+pvsc.code-workspace
 PYTHON_INTERACTIVE_TROUBLESHOOTING.md
+requirements.in
 test.ipynb
 travis*.log
 tsconfig*.json
@@ -42,6 +46,8 @@ webpack.datascience-*.config.js
 .mocha-reporter/**
 .nvm/**
 .nyc_output
+.prettierrc.js
+.sonarcloud.properties
 .venv/**
 .vscode/**
 .vscode-test/**
@@ -61,6 +67,19 @@ node_modules/**
 obj/**
 out/client/**/*analyzer.html
 out/coverconfig.json
+out/datascience-ui/common/**
+out/datascience-ui/data-explorer/**
+out/datascience-ui/datascience-ui/**
+out/datascience-ui/history-react/**
+out/datascience-ui/interactive-common/**
+out/datascience-ui/ipywidgets/**
+out/datascience-ui/native-editor/**
+out/datascience-ui/notebook/datascience-ui/**
+out/datascience-ui/notebook/ipywidgets/**
+out/datascience-ui/plot/**
+out/datascience-ui/react-common/**
+out/datascience-ui/viewers/datascience-ui/**
+out/datascience-ui/viewers/ipywidgets/**
 out/pythonFiles/**
 out/src/**
 out/test/**
