--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,11 +92,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: [checkout]
         steps:
-            - name: Retrieve cached repo
-              uses: actions/cache@v1
-              with:
-                  path: .
-                  key: ${{runner.os}}-${{env.CACHE_CHECKOUT}}
+            - name: Checkout
+              uses: actions/checkout@v2
 
             - name: Install dependencies (npm ci)
               run: npm ci
