--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,64 +120,73 @@ jobs:
 
       - name: Check dependencies
         run: npm run checkDependencies
-  # lint-format-js-ts:
-  #     name: Hygiene (JS/TS)
-  #     runs-on: ubuntu-latest
-  #     needs: [checkout]
-  #     steps:
-  #         - uses: actions/download-artifact@v1
-  #           with:
-  #               name: ${{env.ARTIFACT_NAME_CHECKOUT}}
-  #               path: ${{env.PVSC_WORKDIR}}
-  #         - name: Install dependencies (npm ci)
-  #           run: npm ci
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - name: Run linting
-  #           run: npx tslint --project tsconfig.json
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - name: Run prettier on TypeScript code
-  #           run: npx prettier "src/**/*.ts*" --check
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - name: Run prettier on JavaScript code
-  #           run: npx prettier "build/**/*.js" --check
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  # code-format-python:
-  #     name: Code Format (Python)
-  #     runs-on: ubuntu-latest
-  #     needs: [checkout]
-  #     steps:
-  #         - uses: actions/download-artifact@v1
-  #           with:
-  #               name: ${{env.ARTIFACT_NAME_CHECKOUT}}
-  #               path: ${{env.PVSC_WORKDIR}}
-  #         - name: Use Python ${{env.PYTHON_VERSION}}
-  #           uses: actions/setup-python@v1
-  #           with:
-  #               python-version: ${{env.PYTHON_VERSION}}
-  #         - name: Upgrade pip
-  #           run: python -m pip install -U pip
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - name: Run Black on Python code
-  #           run: |
-  #               python -m pip install -U black
-  #               python -m black . --check
-  #           working-directory: ${{env.PVSC_WORKDIR}}/pythonFiles
-  # build-vsix:
-  #     name: Build VSIX
-  #     runs-on: ubuntu-latest
-  #     needs: [python-reqs]
-  #     steps:
-  #         - uses: actions/download-artifact@v1
-  #           with:
-  #               name: ${{env.ARTIFACT_NAME_PYTHON_REQS}}
-  #               path: ${{env.PVSC_WORKDIR}}
-  #         - name: Install dependencies (npm ci)
-  #           run: npm ci
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - name: Package the VSIX
-  #           run: npm run package
-  #           working-directory: ${{env.PVSC_WORKDIR}}
-  #         - uses: actions/upload-artifact@v1
-  #           with:
-  #               name: ${{env.ARTIFACT_NAME_VSIX}}
-  #               path: ${{env.PVSC_WORKDIR}}/ms-python-insiders.vsix
+
+  hygiene-js-ts:
+    name: Hygiene (JS/TS)
+    runs-on: ubuntu-latest
+    needs: [js-ts-deps]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Retrieve cached npm files
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
+
+      - name: Install dependencies (npm ci)
+        run: npm ci
+
+      - name: Run linting
+        run: npx tslint --project tsconfig.json
+
+      - name: Run prettier on TypeScript code
+        run: npx prettier 'src/**/*.ts*' --check
+
+      - name: Run prettier on JavaScript code
+        run: npx prettier 'build/**/*.js' --check
+
+  hygiene-python:
+    name: Hygiene (Python)
+    runs-on: ubuntu-latest
+    needs: [python-deps]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Use Python ${{env.PYTHON_VERSION}}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{env.PYTHON_VERSION}}
+
+      - name: Run Black on Python code
+        run: |
+          python -m pip install -U black
+          python -m black . --check
+        working-directory: pythonFiles
+
+  build-vsix:
+    name: Build VSIX
+    runs-on: ubuntu-latest
+    needs: [python-reqs, js-ts-deps]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Retrieve cached npm files
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
+
+      - name: Install dependencies (npm ci)
+        run: npm ci
+
+      - name: Package the VSIX
+        run: npm run package
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{env.ARTIFACT_NAME_VSIX}}
+          path: ms-python-insiders.vsix
