--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,7 +169,7 @@ jobs:
   build-vsix:
     name: Build VSIX
     runs-on: ubuntu-latest
-    needs: [python-reqs, js-ts-deps]
+    needs: [python-deps, js-ts-deps]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
