--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - gh-action-tests
 
 env:
   PYTHON_VERSION: 3.8
@@ -56,13 +56,13 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ./pythonFiles/lib/python
-          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-${{hashFiles('**/**-requirements.txt')}}
+          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('**/**-requirements.txt')}}
 
       - name: Cache pip files
         uses: actions/cache@v1
         with:
           path: ~/.cache/pip
-          key: ${{runner.os}}-${{env.CACHE_PIP_DEPS}}-${{hashFiles('**/**-requirements.txt')}}
+          key: ${{runner.os}}-${{env.CACHE_PIP_DEPS}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('**/**-requirements.txt')}}
 
   js-ts-deps:
     name: Install npm dependencies
@@ -184,7 +184,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ./pythonFiles/lib/python
-          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-${{hashFiles('**/**-requirements.txt')}}
+          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('**/**-requirements.txt')}}
 
       - name: Install dependencies (npm ci)
         run: npm ci
@@ -199,3 +199,87 @@ jobs:
         with:
           name: ${{env.ARTIFACT_NAME_VSIX}}
           path: ms-python-insiders.vsix
+
+  ### Non-smoke tests
+ tests:
+    name: Tests
+    # The value of runs-on is the OS of the current job (specified in the strategy matrix below) instead of being hardcoded.
+    runs-on: ${{ matrix.os }}
+    needs: [python-reqs]
+    strategy:
+        matrix:
+            # os: [ubuntu-latest, macos-latest, windows-latest]
+            # python: [3.6, 3.7]
+            python: [3.7]
+            os: [ubuntu-latest]
+            tests: [unit, python-unit]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Retrieve cached npm files
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
+
+      - name: Install dependencies (npm ci)
+          run: npm ci
+
+      - name: Use Python ${{matrix.python}}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{matrix.python}}
+
+      - name: Retrieve cached pythonFiles/ directory
+        uses: actions/cache@v1
+        id: python-cache
+        with:
+          path: ./pythonFiles/lib/python
+          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('**/**-requirements.txt')}}
+
+      - name: Install Python requirements if not cached
+        run: |
+            python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python --no-cache-dir --implementation py --no-deps --upgrade -r requirements.txt
+            python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python/old_ptvsd --no-cache-dir --implementation py --no-deps --upgrade 'ptvsd==4.3.2'
+            python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python/new_ptvsd/no_wheels --no-cache-dir --implementation py --no-deps --upgrade --pre ptvsd
+        if: python-cache.outputs.cache-hit == false
+  
+      - name: Install ptvsd wheels if not cached
+        run: |
+            python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
+            python ./pythonFiles/install_ptvsd.py
+        if: python-cache.outputs.cache-hit == false
+
+      - name: Install test requirements
+        run: python -m pip install --upgrade -r build/test-requirements.txt
+        working-directory: ${{env.PVSC_WORKDIR}}
+
+        # - name: Install IPython test requirements
+        #   run: |
+        #     python -m pip install numpy
+        #     python -m pip install --upgrade -r ./build/ipython-test-requirements.txt
+        #   working-directory: ${{env.PVSC_WORKDIR}}
+        #   if: matrix.tests == ipython
+
+        # - name: Install functional test requirements
+        #   run: |
+        #     python -m pip install numpy
+        #     python -m pip install --upgrade -r ./build/functional-test-requirements.txt
+        #   working-directory: ${{env.PVSC_WORKDIR}}
+        #   if: matrix.tests == functional
+
+        # - name: Downgrade pywin32 for functional tests on Windows + Python 3.6
+        #   run: python -m pip install --upgrade pywin32==224
+        #   working-directory: ${{env.PVSC_WORKDIR}}
+        #   if: matrix.tests == functional && matrix.os == windows-latest && matrix.python == 3.6
+
+        # - name: Run TypeScript unit tests
+        #   run: npm run unittests:cover
+        #   working-directory: ${{env.PVSC_WORKDIR}}
+        #   if: matrix.tests == unit
+
+        # - name: Run Python unit tests
+        #   run: python pythonFiles/tests/run_all.py --color=no --junit-xml=$COMMON_TESTRESULTSDIRECTORY/python-tests-junit.xml
+        #   working-directory: ${{env.PVSC_WORKDIR}}
+        #   if: matrix.tests == python-unit
