--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,6 +233,7 @@ jobs:
 
       - name: Retrieve cached pythonFiles/ directory
         uses: actions/cache@v1
+        # Use an id for this step to be able to access the cache-hit key in the next 2 steps, and check whether we need to install extension requirements or not.
         id: python-cache
         with:
           path: ./pythonFiles/lib/python
@@ -249,7 +250,7 @@ jobs:
         run: |
           python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
           python ./pythonFiles/install_ptvsd.py
-        if: python-cache.outputs.cache-hit == false
+        if: steps.python-cache.outputs.cache-hit == false
 
       - name: Install test requirements
         run: python -m pip install --upgrade -r build/test-requirements.txt
